--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Baking Time!</string>
     <string name="title_recipe_detail">Recipe Detail</string>
+    <string name="bundle_recycler_position">recipe_grid_position</string>
 </resources>
