--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,9 @@
 <resources>
+    <!-- General values, mostly messages or other kind of information to the user-->
     <string name="app_name">Baking Time!</string>
     <string name="title_recipe_detail">Recipe Detail</string>
-    <string name="bundle_recycler_position">recipe_grid_position</string>
+
+    <!-- Additional values to be used in code, not shown ot the user -->
+    <string name="bundle_recycler_position" translatable="false">recipe_grid_position</string>
+    <string name="bundle_request" translatable="false">request_url</string>
 </resources>
