--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="title_recipe_detail">Recipe Detail</string>
 
     <!-- Additional values to be used in code, not shown ot the user -->
+    <string name="recipe_steps_intent" translatable="false">recipe_steps_intent</string>
     <string name="bundle_recycler_position" translatable="false">recipe_grid_position</string>
     <string name="bundle_request" translatable="false">request_url</string>
 </resources>
