feat: The recipes are now properly obtained and adapted ont he list activity.
Further enhancements to the layouts, and adding the prototype of the adapter for the recipe details

--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -2,4 +2,8 @@
 <resources>
     <string name="app_name">Hora da Receita!</string>
     <string name="title_recipe_detail">Passos da Receita</string>
+    <string name="error_loading_message">Não foi possível carregar as receitas,
+        por favor verifique a sua conexão com a internet</string>
+    <string name="action_settings">Configurações</string>
+    <string name="title_activity_recipe">Conteúdo da receita</string>
 </resources>
