--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,9 +2,13 @@
     <!-- General values, mostly messages or other kind of information to the user-->
     <string name="app_name">Baking Time!</string>
     <string name="title_recipe_detail">Recipe Detail</string>
+    <string name="title_activity_recipe">Recipe Content</string>
+    <string name="action_settings">Settings</string>
+    <string name="error_loading_message">Failed to load the recipes, check your internet connection.</string>
 
     <!-- Additional values to be used in code, not shown ot the user -->
     <string name="recipe_steps_intent" translatable="false">recipe_steps_intent</string>
+    <string name="recipe_intent" translatable="false">recipe_content_intent</string>
     <string name="bundle_recycler_position" translatable="false">recipe_grid_position</string>
     <string name="bundle_request" translatable="false">request_url</string>
 </resources>
