feat: Finalizing the flow of the interfaces and the fragments.
The behaviour of the the app as the user interacts with it is finally as it is specified in rubric. Next step: Customize the behaviour of the detail fragment to display the content of the steps, including the videos and images.

--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -4,6 +4,7 @@
     <string name="title_recipe_detail">Passos da Receita</string>
     <string name="error_loading_message">Não foi possível carregar as receitas,
         por favor verifique a sua conexão com a internet</string>
-    <string name="action_settings">Configurações</string>
-    <string name="title_activity_recipe">Conteúdo da receita</string>
+    <string name="recipe_ingredients">Ingredientes</string>
+    <string name="ingredient_measure">Medida: </string>
+    <string name="ingredient_quantity">Quantidade: </string>
 </resources>
