feat: Including the ExoPlayer and displaying the step videos.
Multiple layout improvements are also included.

--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -7,4 +7,7 @@
     <string name="recipe_ingredients">Ingredientes</string>
     <string name="ingredient_measure">Medida: </string>
     <string name="ingredient_quantity">Quantidade: </string>
+    <string name="step_navigation_forward_error">Não há passos seguintes para esta receita.</string>
+    <string name="step_navigation_backward_error">Não há passos anteriores para esta receita.</string>
+    <string name="recipe_servings">Porções: </string>
 </resources>
