--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,17 +6,22 @@
     <string name="error_loading_message">Failed to load the recipes, check your internet connection.</string>
     <string name="step_navigation_forward_error">There are no further steps to this recipe.</string>
     <string name="step_navigation_backward_error">There are no previous steps to this recipe.</string>
+    <string name="appwidget_text">Choose a recipe to display the ingredients.</string>
+    <string name="add_widget">Add widget</string>
 
     <!-- Descriptive strings that let the user know the type of data being displayed to them -->
     <string name="recipe_servings">Servings: </string>
     <string name="ingredient_measure">Measure: </string>
     <string name="ingredient_quantity">Quantity: </string>
 
+
     <!-- Additional values to be used in code, not shown ot the user -->
     <!-- Intents -->
     <string name="intent_recipe" translatable="false">recipe_content_intent</string>
     <string name="intent_recipe_step" translatable="false">step_content_intent</string>
     <string name="intent_recipe_step_index" translatable="false">step_index_intent</string>
+    <string name="service_recipe_name" translatable="false">service_recipe_name</string>
+    <string name="service_recipe_ingredients" translatable="false">service_recipe_ingredients</string>
 
     <!-- State related bundle-->
     <string name="bundle_recycler_position" translatable="false">bundle_recipe_grid_position</string>
