bugfix: Fixing the errors pointed out in the project review
* The state of the ExoPlayer is now being properly saved and restored;
* Lifecycle callbacks are now being properly used to release the video resources;
* Missing espresso tests have been included;
* Using the picasso library to try to load images, when there is a thumbnail url;
* Minor layout adjustments on the detail activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,6 @@
     <string name="ingredient_measure">Measure: </string>
     <string name="ingredient_quantity">Quantity: </string>
 
-
     <!-- Additional values to be used in code, not shown ot the user -->
     <!-- Intents -->
     <string name="intent_recipe" translatable="false">recipe_content_intent</string>
@@ -28,5 +27,7 @@
     <string name="player_ready" translatable="false">player_ready</string>
     <string name="player_window" translatable="false">player_current_window</string>
     <string name="player_position" translatable="false">player_current_position</string>
+    <string name="player_video_uri" translatable="false">player_video_uri</string>
+    <string name="player_thumbnail_uri" translatable="false">player_image_uri</string>
 
 </resources>
